# CTIP-team4

./: CMakeLists.txt  README.md  sonar-project.properties
.github/ISSUE_TEMPLATE/: issue-form.yaml
.github/workflows/: create-jira-issue.yml  team4.yaml
src/: calculator.h  main.cpp
tests/: calculator_test.cpp  my_test.cpp
